--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "express": "^4.21.1",
     "mongoose": "^8.8.1",
     "vlc-client": "^1.1.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.7"
   }
 }
