--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "ffmpeg-static": "^5.2.0",
+    "fluent-ffmpeg": "^2.1.3",
     "mongoose": "^8.8.1",
+    "uuid": "^11.0.3",
     "vlc-client": "^1.1.1"
   },
   "devDependencies": {
